syntax = "proto3";

package ridematching.v1;

import "common/geo.proto";

option go_package = "github.com/Binit-Dhakal/Saarathi/pkg/proto/rmspb";

message CandidatesMatched {
  string saga_id = 1;
  string trip_id = 2;
  repeated string driver_ids = 3;

  int32 attempt = 4;
  int64 first_attempt_unix = 5;
}

message NoDriverMatched{
  string saga_id = 1;
  string trip_id = 2;
  int32 attempt = 3;
  int64 first_attempt_unix = 4;
}
